--- a/_template-en.html
+++ b/_template-en.html
@@ -41,9 +41,11 @@
             "menuPath": "https://bati-itao.github.io/ajax/menu-en.html"
         });
     </script>
-    <main role="main" property="mainContentOfPage" class="container">
+    <main property="mainContentOfPage" class="container">
         <h1 property="name" id="wb-cont">HEADING</h1>
-$CONTENT
+
+CONTENT
+
 <div id="def-preFooter"></div>
 <script src="./scripts/preFooter.min.js"></script>
 </main>
