--- a/_template-fr.html
+++ b/_template-fr.html
@@ -42,9 +42,11 @@
             "menuPath": "https://bati-itao.github.io/ajax/menu-fr.html"
         });
     </script>
-    <main role="main" property="mainContentOfPage" class="container">
+    <main property="mainContentOfPage" class="container">
         <h1 property="name" id="wb-cont">HEADING</h1>
+
 CONTENT
+
 <div id="def-preFooter"></div>
 <script src="./scripts/preFooter.min.js"></script>
 </main>
