add whichSurvey value

--- a/client-satisfaction-fr.html
+++ b/client-satisfaction-fr.html
@@ -51,6 +51,7 @@
             <!-- <input name="ID" type="hidden" value="accessibility_coaching" /> -->
             <input name="ID" type="hidden" value="Thompson" />
             <input name="ESDCEmailForm" type="hidden" value="Y" />
+            <input name="whichSurvey" type="hidden" value="Sondage sur la satisfaction">
 
             <fieldset>
                 <legend>Sur une échelle de 1 (très insatisfait) à 10 (très satisfait), veuillez évaluer&nbsp;:</legend>
