--- a/client-satisfaction-en.html
+++ b/client-satisfaction-en.html
@@ -50,6 +50,7 @@
                 <!-- <input name="ID" type="hidden" value="accessibility_coaching" /> -->
                 <input name="ID" type="hidden" value="Thompson" />
                 <input name="ESDCEmailForm" type="hidden" value="Y" />
+                <input name="whichSurvey" type="hidden" value="Satisfaction Survey">
             <fieldset>
                 <legend>On a scale of 1 (very dissatisfied) to 10 (very satisfied) please rate:</legend>
                 <div class="form-group mrgn-tp-lg">
