--- a/client-satisfaction-en.html
+++ b/client-satisfaction-en.html
@@ -52,7 +52,7 @@
                 <input name="ESDCEmailForm" type="hidden" value="Y" />
                 <input name="whichSurvey" type="hidden" value="Satisfaction Survey">
             <fieldset>
-                <legend>On a scale of 1 (very dissatisfied) to 10 (very satisfied) please rate:</legend>
+                <legend>On a scale of 1 (very dissatisfied) to 10 (extremely satisfied) please rate:</legend>
                 <div class="form-group mrgn-tp-lg">
                     <label for="satisfaction">Over-all satisfaction</label>
                     <select class="form-control" id="satisfaction" name="satisfaction">
