add capture of id query string

--- a/client-satisfaction-en.html
+++ b/client-satisfaction-en.html
@@ -51,6 +51,7 @@
                 <input name="ID" type="hidden" value="Thompson" />
                 <input name="ESDCEmailForm" type="hidden" value="Y" />
                 <input name="whichSurvey" type="hidden" value="Satisfaction Survey">
+                <input name="a11y-id" id="a11y-id" type="hidden" value="">
             <fieldset>
                 <legend>On a scale of 1 (very dissatisfied) to 10 (extremely satisfied) please rate:</legend>
                 <div class="form-group mrgn-tp-lg">
@@ -99,6 +100,26 @@
 <script src="./scripts/appFooter.min.js"></script>
 <script src="./scripts/refFooter.min.js"></script>
 <script src="./scripts/bati-itao.min.js"></script>
+<script>
+
+    // Get URL string and add it to hidden input
+    function getParameterByName(name, url) {
+    if (!url) url = window.location.href;
+        name = name.replace(/[\[\]]/g, '\\$&');
+        var regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
+            results = regex.exec(url);
+        if (!results) return null;
+        if (!results[2]) return '';
+        return decodeURIComponent(results[2].replace(/\+/g, ' '));
+    }
+
+    var getID = getParameterByName('id');
+    $(function() {
+        $('#a11y-id').val(getID);
+    });
+
+</script>
+
 </body>
 
 </html>
