Intake: change document testing to text input

--- a/intake-en.html
+++ b/intake-en.html
@@ -173,11 +173,7 @@
                     <legend>Document Accessibility Review</legend>
                     <div class="form-group mrgn-tp-lg">
                         <label for="DocumentType">Document Type</label>
-                        <select class="form-control" name="DocumentType" id="DocumentType">
-                            <option disabled="disabled" selected="selected">Make your selection...</option>
-                            <option value="Microsoft Office">Microsoft Office</option>
-                            <option value="PDF">PDF</option>
-                        </select>
+                        <input class="form-control full-width" type="text /">
                     </div>
                 </fieldset>
                 
