--- a/intake-en.html
+++ b/intake-en.html
@@ -44,6 +44,12 @@
     <main property="mainContentOfPage" class="container">
         <h1 property="name" id="wb-cont">Intake Form</h1>
 
+        <div class="alert alert-info mrgn-tp-lg mrgn-bttm-lg">
+            <p>This page is a demonstration of the ITAO intake form that will be hosted on our iService site.</p>
+            <p>Add your comments / suggestions as <a href="https://github.com/bati-itao/example/issues/new?title=Intake%20form:%20">an open issue</a> on Github.</p>
+            <p>The <strong>Submit</strong> button at the end of the form will be <strong>activated</strong> once we move this form to iService</p>
+        </div>
+
         
         <div class="wb-frmvld">
         <form action="#" id="a11y-survey" method="post">
@@ -210,13 +216,18 @@
                         <label for="EmailAddress">Email Address</label>
                         <input class="form-control full-width" id="EmailAddress" name="EmailAddress" autocomplete="email" type="email" />
                     </div>
+                    <div class="form-group">
+                        <label for="EmailAddress"><span class="field-name">Deadline</span><span class="datepicker-format"> (YYYY-MM-DD)</span></label>
+                        <input class="form-control full-width" id="deadline" name="deadline" data-rule-dateISO="true" type="date" />
+                    </div>
                 </fieldset>
                 <div class="form-group mrgn-tp-lg">
                     <label for="additionalInfo">Any additional information</label>
                     <textarea name="additionalInfo" id="additionalInfo" class="form-control full-width expand"></textarea>
                 </div>
             </div>
-           <input type="submit" value="Submit" class="btn btn-primary btn-lg" />
+           <input type="submit" value="Submit" disabled="disabled" class="btn btn-primary btn-lg" />
+           <input type="reset" value="Reset" class="btn btn-primary btn-lg">
         </form>
         </div>
 <div id="def-preFooter"></div>
