intake: change unknown to other

--- a/intake-en.html
+++ b/intake-en.html
@@ -90,7 +90,7 @@
                             <option value="Mobility / Dexterity">Mobility / Dexterity</option>
                             <option value="Hearing Impairment">Hearing Impairment</option>
                             <option value="Cognition">Cognition</option>
-                            <option value="Unknow">Unknown</option>
+                            <option value="Unknow">Other</option>
                         </select>
                     </div>
                     <div class="form-group mrgn-tp-lg">
