--- a/_template-fr.html
+++ b/_template-fr.html
@@ -10,7 +10,7 @@
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
     <meta name="description"
-        content="">
+        content="Le bureau de l'accessibilite des TI est fournisseur de technologie adaptative et l'avocat pour l'inclusion des personnes ayant des handicaps dans le lieu du travail.">
     <!-- Meta data-->
     <!-- Load closure template scripts -->
     <script src="https://ssl-templates.services.gc.ca/rn/cls/wet/gcweb/cdts/compiled/soyutils.js"></script>
