--- a/conference-en.html
+++ b/conference-en.html
@@ -38,16 +38,20 @@
     </script>
     <main property="mainContentOfPage" class="container">
         <h1 property="name" id="wb-cont">ESDC meeting options</h1>
-        <div class="alert alert-info">
+        <div class="alert alert-warning">
             <p>This page in in <span class="text-uppercase">draft</span> mode. Please use the <a href="https://github.com/bati-itao/example/issues/2">open issue</a> to discuss changes to this page</p>
-        </div>
+		</div>
+		
+		<div class="alert alert-info">
+			<p>The information on this page was pull together from the <a href="./assets/audio_video_conf_matrix.pdf">Audio / Video Conference Matrix (PDF)</a> documentation</p>
+		</div>
         
         <section>
             <h2>Background information</h2>
             <p>The IT Accessibility team have been approached a few times about the options they have to create accessible remote meetings. The ITAO prepared this document in the effort to help guide people with their options.</p>
             <p>The following links are tools to help you make the best possible choices;</p>
             <ol>
-                <li><a href="https://esdc-a11y.slack.com/files/U01056C9WBG/FVCC53A59/audio_video_conf_matrix.pdf?origin_team=T01030QN5E1&amp;origin_channel=C0109Q5L54M">Audio and Video Conference Matrix</a></li>
+                <li><a href="./assets/audio_video_conf_matrix.pdf">Audio and Video Conference Matrix (PDF)</a></li>
                 <li><a href="https://www.canada.ca/en/employment-social-development/programs/disability/arc/inclusive-meetings.html">Guide to Planning Inclusive meetings</a></li>
             </ol>
         </section>
