--- a/intake-en.html
+++ b/intake-en.html
@@ -69,7 +69,7 @@
                         <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle5 , #clientInformation", "live": true}'>COTS ICT Assessment</option>
                         <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle6 , #clientInformation", "live": true}'>Document Accessibility Review</option>
                         <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle7 , #clientInformation", "live": true}'>Procurement and General Advice on Accessible ICT</option>
-                        <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle8 , #clientInformation , #generalRequest", "live": true}'>Unknown</option>
+                        <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle8 , #clientInformation , #generalRequest", "live": true}'>Other</option>
                     </ul>
                 </div>
 
