--- a/intake-en.html
+++ b/intake-en.html
@@ -178,8 +178,8 @@
                 <fieldset id="toggle6" class="hidden">
                     <legend>Document Accessibility Review</legend>
                     <div class="form-group mrgn-tp-lg">
-                        <label for="DocumentType">Document Type</label>
-                        <input class="form-control full-width" type="text /">
+                        <label for="documentType">Document Type</label>
+                        <input class="form-control full-width" id="documentType" name="documentType" type="text" />
                     </div>
                 </fieldset>
                 
@@ -215,11 +215,26 @@
                     <div class="form-group">
                         <label for="EmailAddress">Email Address</label>
                         <input class="form-control full-width" id="EmailAddress" name="EmailAddress" autocomplete="email" type="email" />
-                    </div>
-                    <div class="form-group">
-                        <label for="EmailAddress"><span class="field-name">Deadline</span><span class="datepicker-format"> (YYYY-MM-DD)</span></label>
-                        <input class="form-control full-width" id="deadline" name="deadline" data-rule-dateISO="true" type="date" />
-                    </div>
+					</div>
+										
+					<fieldset>
+						<legend>Dealine</legend>
+						<div class="row">
+							<div class="form-group col-md-3">
+								<label for="year">Year (YYYY)</label>
+								<input type="number" class="form-control" id="year" name="year" />
+							</div>
+							<div class="form-group col-md-3">
+								<label for="month">Month</label>
+								<input type="number" class="form-control" id="month" name="month" />
+							</div>
+							<div class="form-group col-md-3">
+								<label for="day">Day</label>
+								<input type="number" class="form-control" id="day" name="day" />
+							</div>
+						</div>
+					</fieldset>
+
                 </fieldset>
                 <div class="form-group mrgn-tp-lg">
                     <label for="additionalInfo">Any additional information</label>
