--- a/captcha-accessible-en.html
+++ b/captcha-accessible-en.html
@@ -77,7 +77,7 @@
             submission. Successful confirmation via this link verifies the authenticity of the user and persists the
             data. If the subscription is not confirmed, within a period of time as identified by the business, the data
             is discarded. This ensures that the data committed to the database is from actual users and not BOT
-            submissions, which in-turn ensures the integrity and accuracy of the Youth Service data.</p>
+            submissions, which in-turn ensures the integrity and accuracy of the data.</p>
         <h2>Additional information</h2>
         <p>To further secure the form data, it is recommended that the following additional functionality be
             implemented as further security.</p>
