intake: add ICT definition

--- a/intake-en.html
+++ b/intake-en.html
@@ -33,6 +33,11 @@
                 "title": "Home",
                 "href" : "https://bati-itao.github.io/"
             }],
+			"lngLinks": [{
+                "lang": "en",
+                "href": "./intake-fr.html",
+                "text": "English"
+            }],
             "menuPath": "https://bati-itao.github.io/ajax/menu-en.html"
         });
     </script>
@@ -59,8 +64,8 @@
                         <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle1 , #clientInformation", "live": true}'>Assistive Technology Assessment, Support and Loan Bank</li>
                         <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle2 , #clientInformation", "live": true}'>IT Accessibility Coaching, Awareness and Curriculum</li>
                         <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle3 , #clientInformation", "live": true}'>Accessibility Compliance Project</li>
-                        <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle4 , #clientInformation", "live": true}'>Web ICT Assessment</li>
-                        <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle5 , #clientInformation", "live": true}'>COTS ICT Assessment</li>
+                        <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle4 , #clientInformation", "live": true}'>Web Information and communications technology (ICT) Assessment</li>
+                        <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle5 , #clientInformation", "live": true}'>COTS Information and communications technology (ICT) Assessment</li>
                         <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle6 , #clientInformation", "live": true}'>Document Accessibility Review</li>
                         <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle7 , #clientInformation", "live": true}'>Procurement and General Advice on Accessible ICT</li>
                         <li data-wb-fieldflow='{"action": "toggle", "toggle": "#followUp , #generalRequest , #clientInformation", "live": true}'>Follow up on previous request</li>
@@ -90,7 +95,7 @@
                             <option value="Mobility / Dexterity">Mobility / Dexterity</option>
                             <option value="Hearing Impairment">Hearing Impairment</option>
                             <option value="Cognition">Cognition</option>
-                            <option value="Unknow">Other</option>
+                            <option value="Other">Other</option>
                         </select>
                     </div>
                     <div class="form-group mrgn-tp-lg">
@@ -132,7 +137,7 @@
                 </fieldset>
                 
                 <fieldset id="toggle4" class="hidden">
-                    <legend>Web ICT Assessment</legend>
+                    <legend>Web Information and communications technology (ICT) Assessment</legend>
                     <div class="form-group mrgn-tp-lg">
                         <label for="Websitecategory">Website category</label>
                         <select class="form-control" name="Websitecategory" id="Websitecategory">
@@ -156,7 +161,7 @@
                 </fieldset>
                 
                 <fieldset id="toggle5" class="hidden">
-                    <legend>COTS ICT Assessment</legend>
+                    <legend>COTS Information and communications technology (ICT) Assessment</legend>
                     <div class="form-group mrgn-tp-lg">
                         <label for="ProductName">Product Name</label>
                         <input class="form-control full-width" id="ProductName" name="ProductName" type="text" />
@@ -189,12 +194,12 @@
                 <fieldset id="toggle7" class="hidden">
                     <legend>Procurement and General Advice on Accessible Information and Communication Technology (ICT)</legend>
                     <div class="form-group mrgn-tp-lg">
-                        <label for="ICT_Type">ICT Type</label>
+                        <label for="ICT_Type">Information and communications technology (ICT) Type</label>
                         <select class="form-control" name="ICT_Type" id="ICT_Type">
                             <option disabled="disabled" selected="selected">Make your selection...</option>
                             <option value="Software">Software</option>
                             <option value="Hardware">Hardware</option>
-                            <option value="ICT with Two Way Communication">ICT with Two Way Communication</option>
+                            <option value="Information and communications technology (ICT) with Two Way Communication">Information and communications technology (ICT) with Two Way Communication</option>
                             <option value="Relay and Emergency Services">Relay and Emergency Services</option>
                         </select>
                     </div>
