intake: Lang link typo

--- a/intake-en.html
+++ b/intake-en.html
@@ -36,7 +36,7 @@
 			"lngLinks": [{
                 "lang": "en",
                 "href": "./intake-fr.html",
-                "text": "English"
+                "text": "Français"
             }],
             "menuPath": "https://bati-itao.github.io/ajax/menu-en.html"
         });
