intake: update French

--- a/intake-en.html
+++ b/intake-en.html
@@ -61,7 +61,7 @@
                 <div class="wb-fieldflow" data-wb-fieldflow='{"noForm": true}'>
                     <p>Select a Service Category</p>
                     <ul>
-                        <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle1 , #clientInformation", "live": true}'>Assistive Technology Assessment, Support and Loan Bank</li>
+                        <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle1 , #clientInformation", "live": true}'>Adaptive Technology Assessment</li>
                         <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle2 , #clientInformation", "live": true}'>IT Accessibility Coaching, Awareness and Curriculum</li>
                         <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle3 , #clientInformation", "live": true}'>Accessibility Compliance Project</li>
                         <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle4 , #clientInformation", "live": true}'>Web Information and communications technology (ICT) Assessment</li>
@@ -84,7 +84,7 @@
                 </div>
 
                 <fieldset id="toggle1" class="hidden">
-                    <legend>Assistive Technology Assessment, Support and Loan Bank</legend>
+                    <legend>Adaptive Technology Assessment</legend>
                     <div class="form-group mrgn-tp-lg">
                         <label for="DisabilityType">Disability Type</label>
                         <select class="form-control" name="DisabilityType" id="DisabilityType">
