--- a/intake-thanks-fr.html
+++ b/intake-thanks-fr.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]-->
+<!--[if lt IE 9]><html class="no-js lt-ie9" lang="fr" dir="ltr"><![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js" lang="en" dir="ltr">
+<html class="no-js" lang="fr" dir="ltr">
 <!--<![endif]-->
 <head>
     <meta charset="utf-8">
     <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-    <title>Request sent successfully - ESDC / IT Accessibility office</title>
+    <title>Demande envoyé avec succès - EDSC / Bureau de l’accessibilité de la TI</title>
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
     <meta name="description"
-        content="Thank you for submitting the intake form for the IT Accessibility Office at ESDC">
+        content="Merci d'avoir soumis le formulaire d'inscription pour le Bureau de l’accessibilité de la TI">
     <!-- Meta data-->
     <!-- Load closure template scripts -->
     <script src="https://ssl-templates.services.gc.ca/rn/cls/wet/gcweb/cdts/compiled/soyutils.js"></script>
-    <script src="https://ssl-templates.services.gc.ca/rn/cls/wet/gcweb/cdts/compiled/wet-en.js"></script>
+    <script src="https://ssl-templates.services.gc.ca/rn/cls/wet/gcweb/cdts/compiled/wet-fr.js"></script>
     <!-- Write closure template -->
     <script src="./scripts/refTop.min.js"></script>
 </head>
@@ -35,22 +35,18 @@
             }],
 			"lngLinks": [{
                 "lang": "en",
-                "href": "./intake-thanks-fr.html",
-                "text": "Français"
+                "href": "./intake-thanks-en.html",
+                "text": "English"
             }],
-            "menuPath": "https://bati-itao.github.io/ajax/menu-en.html"
+            "menuPath": "https://bati-itao.github.io/ajax/menu-fr.html"
         });
     </script>
     <main property="mainContentOfPage" class="container">
-        <h1 property="name" id="wb-cont">Request sent successfully</h1>
-
-
-		<p>Thank you for submitting your request. An IT accessibility office team member will get back to you as soon as possible.</p>
-
-		<p>You may be asked for additional documents or information to process your request.</p>
-
-		<p>Please visit our <a href="http://iservice.prv/eng/imit/A11Y/index.shtml">website</a> on accessibility standards and services.</p>
-
+		<h1 property="name" id="wb-cont">Demande envoyé avec succès</h1>
+		
+		<p>Merci d'avoir soumis votre demande. Un membre de l’équipe du bureau d'accessibilité des TI vous répondra dans les plus brefs délais.</p>
+		<p>Il se pourrait que l’on vous exige des documents ou de l’information additionnel pour traiter votre demande.</p>
+		<p>Veuillez visiter notre <a href="http://iservice.prv/fra/giti/A11E/index.shtml">site Web</a> pour plus d'informations sur nos normes en accessibilité et nos services.</p>
 
         
 <div id="def-preFooter"></div>
