intake: ready for prime time

--- a/intake-en.html
+++ b/intake-en.html
@@ -44,17 +44,10 @@
     <main property="mainContentOfPage" class="container">
         <h1 property="name" id="wb-cont">Intake Form</h1>
 
-        <div class="alert alert-info mrgn-tp-lg mrgn-bttm-lg">
-            <p>This page is a demonstration of the ITAO intake form that will be hosted on our iService site.</p>
-            <p>Add your comments / suggestions as <a href="https://github.com/bati-itao/example/issues/new?title=Intake%20form:%20">an open issue</a> on Github.</p>
-            <p>The <strong>Submit</strong> button at the end of the form will be <strong>activated</strong> once we move this form to iService</p>
-        </div>
-
         
         <div class="wb-frmvld">
         <form action="#" id="a11y-survey" method="post">
-                <!-- <input name="ID" type="hidden" value="accessibility_coaching" /> -->
-                <input name="ID" type="hidden" value="Thompson" />
+                <input name="ID" type="hidden" value="accessibility_coaching" />
                 <input name="ESDCEmailForm" type="hidden" value="Y" />
                 <input name="whichSurvey" type="hidden" value="Intake">
 
@@ -248,7 +241,7 @@
                     <textarea name="additionalInfo" id="additionalInfo" class="form-control full-width expand"></textarea>
                 </div>
             </div>
-           <input type="submit" value="Submit" disabled="disabled" class="btn btn-primary btn-lg" />
+           <input type="submit" value="Submit" class="btn btn-primary btn-lg" />
            <input type="reset" value="Reset" class="btn btn-primary btn-lg">
         </form>
         </div>
