--- a/intake-fr.html
+++ b/intake-fr.html
@@ -46,8 +46,7 @@
         
         <div class="wb-frmvld">
         <form action="#" id="a11y-survey" method="post">
-                <!-- <input name="ID" type="hidden" value="accessibility_coaching" /> -->
-                <input name="ID" type="hidden" value="Thompson" />
+				<input name="ID" type="hidden" value="accessibility_coaching" />
                 <input name="ESDCEmailForm" type="hidden" value="Y" />
                 <input name="whichSurvey" type="hidden" value="Formulaire admission">
 
@@ -241,7 +240,7 @@
                     <textarea name="additionalInfo" id="additionalInfo" class="form-control full-width expand"></textarea>
                 </div>
             </div>
-           <input type="submit" value="Soumettre" disabled="disabled" class="btn btn-primary btn-lg" />
+           <input type="submit" value="Soumettre" class="btn btn-primary btn-lg" />
            <input type="reset" value="Réinitialiser" class="btn btn-primary btn-lg">
         </form>
         </div>
