--- a/captcha-accessible-en.html
+++ b/captcha-accessible-en.html
@@ -5,105 +5,140 @@
 <!--<![endif]-->
 
 <head>
-    <meta charset="utf-8">
-    <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-    <title>Are CAPTCHAs accessible? - ESDC / IT Accessibility office</title>
-    <meta content="width=device-width,initial-scale=1" name="viewport">
-    <!-- Meta data -->
-    <meta name="description"
-        content="IT Accessibility Office provides adaptive technology and advocate for inclusiveness of people with disabilities in the workplace.">
-    <!-- Meta data-->
-    <!-- Load closure template scripts -->
-    <script src="https://ssl-templates.services.gc.ca/rn/cls/wet/gcweb/cdts/compiled/soyutils.js"></script>
-    <script src="https://ssl-templates.services.gc.ca/rn/cls/wet/gcweb/cdts/compiled/wet-en.js"></script>
-    <!-- Write closure template -->
-    <script src="./scripts/refTop.min.js"></script>
+	<meta charset="utf-8">
+	<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
+	<title>Are CAPTCHAs accessible? - ESDC / IT Accessibility office</title>
+	<meta content="width=device-width,initial-scale=1" name="viewport">
+	<!-- Meta data -->
+	<meta name="description"
+		content="IT Accessibility Office provides adaptive technology and advocate for inclusiveness of people with disabilities in the workplace.">
+	<!-- Meta data-->
+	<!-- Load closure template scripts -->
+	<script src="https://ssl-templates.services.gc.ca/rn/cls/wet/gcweb/cdts/compiled/soyutils.js"></script>
+	<script src="https://ssl-templates.services.gc.ca/rn/cls/wet/gcweb/cdts/compiled/wet-en.js"></script>
+	<!-- Write closure template -->
+	<script src="./scripts/refTop.min.js"></script>
 </head>
 
 <body vocab="https://schema.org/" typeof="WebPage">
-    <div id="def-top">
-    </div>
-    <!-- Write closure template -->
-    <script>
-        var defTop = document.getElementById("def-top");
-        defTop.outerHTML = wet.builder.appTop({
-            "appName": [{
-                "text": "ESDC / IT Accessibility office",
-                "href": "https://bati-itao.github.io/index-en.html"
-            }],
-            "breadcrumbs": [{
-                "title": "Home",
-                "href": "https://bati-itao.github.io/index-en.html"
-            }],
-            "lngLinks": [{
-                "lang": "fr",
-                "href": "./index-fr.html",
-                "text": "Français"
-            }],
-            "menuPath": "https://bati-itao.github.io/ajax/menu-en.html"
-        });
-    </script>
-    <main role="main" property="mainContentOfPage" class="container">
-        <h1 property="name" id="wb-cont">Are CAPTCHAs accessible?</h1>
+	<div id="def-top">
+	</div>
+	<!-- Write closure template -->
+	<script>
+		var defTop = document.getElementById("def-top");
+		defTop.outerHTML = wet.builder.appTop({
+			"appName": [{
+				"text": "ESDC / IT Accessibility office",
+				"href": "https://bati-itao.github.io/index-en.html"
+			}],
+			"breadcrumbs": [{
+				"title": "Home",
+				"href": "https://bati-itao.github.io/index-en.html"
+			}],
+			"lngLinks": [{
+				"lang": "fr",
+				"href": "./index-fr.html",
+				"text": "Français"
+			}],
+			"menuPath": "https://bati-itao.github.io/ajax/menu-en.html"
+		});
+	</script>
+	<main role="main" property="mainContentOfPage" class="container">
+		<h1 property="name" id="wb-cont">Are CAPTCHAs accessible?</h1>
 
-        <p>Why are the usual strategies used online not accessible and not an option for us? The following CAPTCHA’s are
-            typically used to prevent BOT attacks but are not accessible or fully compliant, and/or have other
-            identified challenges.</p>
-        <h2>CAPTCHAs</h2>
-        <h3>Image based CAPTCHA’s</h3>
-        <p>Not accessible as visually impaired people cannot see the images and input the requested information.</p>
-        <h3>Audio CAPTCHA</h3>
-        <p>This will work with the screen readers, as the user can “hear” the word(s), but it can be exploited by smart
-            and presents the same problem as Image Based CAPTCHA’s for the visually impaired. Here is an <a href="https://gbhackers.com/security-researcher-breaks-googles-recaptcha-v2-using-googles-tool/">audio CAPTCHA</a> that covers it in details.</p>
-        <h3>reCAPTCHA</h3>
-        <p>Uses digitized words but presents the same problem as Image Based CAPTCHA’s for the visually impaired.</p>
-        <h2>Alternative methods</h2>
-        <p>In addition to the above mentioned CAPTCHA’s. the following are also used to prevent attacks.</p>
-        <h3>Common names are not used for attributes</h3>
-        <p>When bots crawl, they typically look for common field names like email address, name etc. This information
-            can be made obscure as a way to deter bots but it would be confusing for our legitimate end users. This
-            option is accessible, but not user friendly.</p>
-        <h3>Hidden input fields</h3>
-        <p>A field that is not required for business can be hidden using Cascading Style Sheets (CSS). A BOT would
-            typically complete this hidden field and upon Submit, we can check if that field has data and if it does we
-            simply reject submission. This option is accessible, but can be hacked.</p>
-        <h3>Random question</h3>
-        <p>Random questions can be asked based on “other” input from the user. For example: What is the second and
-            seventh digit of your phone number. This option is accessible, but can be hacked and there is a significant
-            level of effort required to implement this option.</p>
-        <h3>Email address field/confirmation process</h3>
-        <p>Capturing an email address and implementing an email confirmation process protects against BOT attacks
-            because an email which contains a unique confirmation link is sent to the user immediately after form
-            submission. Successful confirmation via this link verifies the authenticity of the user and persists the
-            data. If the subscription is not confirmed, within a period of time as identified by the business, the data
-            is discarded. This ensures that the data committed to the database is from actual users and not BOT
-            submissions, which in-turn ensures the integrity and accuracy of the data.</p>
-        <h2>Additional information</h2>
-        <p>To further secure the form data, it is recommended that the following additional functionality be
-            implemented as further security.</p>
-        <h4>Hidden input fields</h4>
-        <p>Although as mentioned above, on its own this option is not completely secure but when used with the email
-            address/confirmation process it adds an additional layer to protect data and is not difficult to implement.
-            To ensure accessibility and compliance, this field will be hidden visually and from screen readers, and the
-            input value of this field will be checked before accepting submission of data.</p>
-        <h2>Recommendation</h2>
-        <p>Implementation of the following methods for the web form are recommended to optimize user
-            experience and accessibility, as well as ensure data integrity and accuracy:</p>
-        <ul>
-            <li>Include a required email address field/confirmation process and persist data only upon successful
-                confirmation.</li>
-            <li>Enable hidden field validation on form submission.</li>
-        </ul>
-        
-        <p>If you wish to know more information about CAPTCHAs and alternative methods to prevent BOT attacks we encourage you to visit the <a href="https://www.w3.org/WAI/GL/wiki/Captcha_Alternatives_and_thoughts">Captcha Alternative and thoughts</a> page on the W3C website.</p>
-    
-        <div id="def-preFooter"></div>
-        <script src="./scripts/preFooter.min.js"></script>
-    </main>
-    <div id="def-footer"></div>
-    <script src="./scripts/appFooter.min.js"></script>
-    <script src="./scripts/refFooter.min.js"></script>
-    <script src="./scripts/bati-itao.min.js"></script>
+		<p>Why are the usual strategies used online not accessible and not an option for us? The following CAPTCHA’s are
+			typically used to prevent BOT attacks but are not accessible or fully compliant, and/or have other
+			identified challenges.</p>
+		<h2>CAPTCHAs</h2>
+		<h3>Image based CAPTCHA’s</h3>
+		<p>Not accessible as visually impaired people cannot see the images and input the requested information.</p>
+		<h3>Audio CAPTCHA</h3>
+		<p>This will work with the screen readers, as the user can “hear” the word(s), but it can be exploited by smart
+			and presents the same problem as Image Based CAPTCHA’s for the visually impaired. Here is an <a href="https://gbhackers.com/security-researcher-breaks-googles-recaptcha-v2-using-googles-tool/">audio CAPTCHA</a> that covers it in details.</p>
+		<h3>reCAPTCHA</h3>
+		<p>Uses digitized words but presents the same problem as Image Based CAPTCHA’s for the visually impaired.</p>
+		<h2>Alternative methods</h2>
+		<p>In addition to the above mentioned CAPTCHA’s. the following are also used to prevent attacks.</p>
+		<h3>Common names are not used for attributes</h3>
+		<p>When bots crawl, they typically look for common field names like email address, name etc. This information
+			can be made obscure as a way to deter bots but it would be confusing for our legitimate end users. This
+			option is accessible, but not user friendly.</p>
+		<h3>Hidden input fields</h3>
+		<p>A field that is not required for business can be hidden using Cascading Style Sheets (CSS). A BOT would
+			typically complete this hidden field and upon Submit, we can check if that field has data and if it does we
+			simply reject submission. This option is accessible, but can be hacked.</p>
+		<h3>Random question</h3>
+		<p>Random questions can be asked based on “other” input from the user. For example: What is the second and
+			seventh digit of your phone number. This option is accessible, but can be hacked and there is a significant
+			level of effort required to implement this option.</p>
+		<h3>Email address field/confirmation process</h3>
+		<p>Capturing an email address and implementing an email confirmation process protects against BOT attacks
+			because an email which contains a unique confirmation link is sent to the user immediately after form
+			submission. Successful confirmation via this link verifies the authenticity of the user and persists the
+			data. If the subscription is not confirmed, within a period of time as identified by the business, the data
+			is discarded. This ensures that the data committed to the database is from actual users and not BOT
+			submissions, which in-turn ensures the integrity and accuracy of the data.</p>
+		<h2>Additional information</h2>
+		<p>To further secure the form data, it is recommended that the following additional functionality be
+			implemented as further security.</p>
+		<h4>Hidden input fields</h4>
+		<p>Although as mentioned above, on its own this option is not completely secure but when used with the email
+			address/confirmation process it adds an additional layer to protect data and is not difficult to implement.
+			To ensure accessibility and compliance, this field will be hidden visually and from screen readers, and the
+			input value of this field will be checked before accepting submission of data.</p>
+		<h2>Recommendation</h2>
+		<p>Implementation of the following methods for the web form are recommended to optimize user
+			experience and accessibility, as well as ensure data integrity and accuracy:</p>
+		<ul>
+			<li>Include a required email address field/confirmation process and persist data only upon successful
+				confirmation.</li>
+			<li>Enable hidden field validation on form submission.</li>
+		</ul>
+		
+		<p>If you wish to know more information about CAPTCHAs and alternative methods to prevent BOT attacks we encourage you to visit the <a href="https://www.w3.org/WAI/GL/wiki/Captcha_Alternatives_and_thoughts">Captcha Alternative and thoughts</a> page on the W3C website.</p>
+		<section>
+			<h2>Honeypot technique</h2>
+			<section>
+				<h3>Preamble</h3>
+				<p>How the honeypot technique should work: </p>
+				<ul>
+					<li>Expose a form field to a bot, but not a human.</li>
+					<li>The field should have a programmatically determinable purpose (such as through the use of a <code>label</code> element that&rsquo;s associated to the <code>input</code> so a bot can figure out what&rsquo;s being asked.</li>
+					<li>That field should be something that the form <em>could</em> be asking for, but isn&rsquo;t, such as a birthdate, or a secondary phone number.</li>
+					<li>A bot should have as much evidence as possible that the field should be filled in, like even adding &ldquo;<code>required</code>&rdquo; to the <code>label</code> text, and <strong>not</strong> embedding a class name like &ldquo;<code>hidden</code>&rdquo; or having <code>style=&rdquo;display:none;&rdquo;</code>.</li>
+					<li>Add &lsquo;<code>required</code>&rsquo; attributes to the <code>input</code>s, then get the browser to ignore it, remove with JavaScript just before form submission or use the &lsquo;<code>novalidate</code>&rsquo; attribute on the <code>form</code> element.</li>
+					<li>In order for humans to avoid filling it in:</li>
+					<li>It should be hidden visually (like using <code>class=&rdquo;sr-only&rdquo;</code>, <code>class=&rdquo;wb-inv&rdquo;</code> or <code>class=&rdquo;vital&rdquo;</code> on this page)</li>
+					<li>It should be removed form the tab order using <code>tabindex=&rdquo;-1&rdquo;</code></li>
+					<li>They should be hidden from screen readers using JavaScript to apply <code>aria-hidden=&rdquo;true&rdquo;</code> on the parent element of the <code>input</code> and <code>label</code></li>
+					<li>If, after submitting, the server detects a value in that form field, it should ignore the form submission.</li>
+				</ul>
+			</section>
+			<section>
+				<h3>Accessibility Assessment of UAT solution:</h3>
+				<ul>
+					<li>A browser&rsquo;s autofill won&rsquo;t (or, at least <em>shouldn&rsquo;t</em>) do autofill on name, or email, or anything if the <code>input</code> element has the attribute <code>autocomplete=&rdquo;off&rdquo;</code>, which these honeypot fields do. So that&rsquo;s good.</li>
+					<li>When tabbing through the page using a screen reader (NVDA+Firefox) in Forms Mode the honeypot fields are missed, this is good. This is because the <code>input</code>s have <code>tabindex=&rdquo;-1&rdquo;</code>.</li>
+					<li>On the iPhone test we went through the page by swiping right (which is typical behavior for a screen reader user on mobile) and we do hear the honeypot field labels.</li>
+					<li>On a desktop with a screen reader, when we read the page from top to bottom without going into forms mode, the screen reader does read out the honeypot field labels.</li>
+					<li>The reason that the honeypot fields are missed in forms mode, but not regular mode is that the <code>input</code>s have <code>tabindex=&rdquo;-1&rdquo;</code>, which removes them from the focus order. However, the <code>label</code> elements are only hidden from view similar to how <code>class=&rdquo;wb-inv&rdquo;</code> in WET hides information visually, but exposes it to screen readers.</li>
+				</ul>
+				<h3>Required fixes for this solution to work properly:</h3>
+				<ul>
+					<li>Apply <code>aria-hidden=&rdquo;true&rdquo;</code> to a parent element of the <code>label</code>s for the honeypot fields. For example: <code>tr class=&rdquo;vital&rdquo; aria-hidden=&rdquo;true&rdquo;</code>. It&rsquo;s best if <code>aria-hidden</code> attributes are applied using JavaScript, rather than hardcoded into HTML, just to make it that much harder for a bot to detect if a field is hidden or not.</li>
+					<li>Add the &ldquo;required&rdquo; attribute on the honeypot <code>input</code>s and make sure these are ignored by using &lsquo;novalidate&rsquo; attribute on the <code>form</code> element. It&rsquo;s best if the &lsquo;required&rsquo; attribute is hardcoded into the HTML so a bot sees that the field is required, and will provide a value for it.</li>
+					<li>The <code>input</code>s have <code>tabindex=&rdquo;-1&rdquo;</code> but please ensure that the <code>tabindex=&rdquo;-1&rdquo;</code>s are injected using JavaScript as to avoid a bot determining that they are honeypot fields.</li>
+				</ul>
+				<p>On top of the of the above fixes it&rsquo;s also suggested that a timer be implemented. A timer should measure the time between when the user types into the first form field (first keystroke) to the time the form submission occurs. A bot will typically fill out a form very quickly and then submit so we can detect bots by measuring that time. The timer can be a bit subjective but what we really want to prevent here are the simple bots that are not &ldquo;pausing&rdquo; so a timer like 10 seconds should be sufficient. A form submission that took 10 seconds from first keyboard stroke to form submission can&rsquo;t be human as there are too many fields to fill out within that span of time.</p>
+			</section>
+		</section>
+		<div id="def-preFooter"></div>
+		<script src="./scripts/preFooter.min.js"></script>
+	</main>
+	<div id="def-footer"></div>
+	<script src="./scripts/appFooter.min.js"></script>
+	<script src="./scripts/refFooter.min.js"></script>
+	<script src="./scripts/bati-itao.min.js"></script>
 </body>
 
 </html>
